--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "handlebars": "^4.7.8",
     "normalize.css": "^8.0.1",
     "postcss-scss": "^4.0.9"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
