--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
   "dependencies": {
     "handlebars": "^4.7.8",
     "normalize.css": "^8.0.1"
-  },
-  "lint-staged": {
-    "*.ts": "lint:typecheck && lint:ts",
-    "*.css": "lint:css"
   }
+//  "lint-staged": {
+//    "*.ts": "lint:typecheck && lint:ts",
+//    "*.css": "lint:css"
+//  }
 }
